    treeparameters were saved.
October 31, 2005
  - Fix buffer overflow problem in griprint.cc found by D. Caussyn.
November 29, 2005
  - Put spectrum names in integrations (and hence in logfiles), rather
    than slot numbers
  - Defect 174 - Make +/- buttons kick out of autoscale.
  - Defect 162 - Document user's obligation to delete buffer
    translators.
Decemberr 19, 2005
  - Remove illegal default parameter from PointlistGate.h's InGate with
    parameters.
February 1, 2006
  - Factor adding a configuration parameter to a CModule in Scriptable SpecTcl
    into AddParameter member function so extenders can add new parameter types.
3.1-pre5
February 17, 2006
  - Factor out multiple identical definitions of some typedefs into
    xamineDataTypes.h
February 20, 2006
  -  Add longer descriptive titles to the Xamine names (parameter, gates etc).
  -  Fix some quoting errors in gui with respect to spectrum names with spaces.
February 21, 2006
  - Protect evals from parameters that have spaces in them by quoting
    with [list].
  - Add ability to list gates with spectra in SpectrumPackage.cpp's 
    DescribeSpectrum and immediate callers.
  - Add -showgate switch to -list operation on spectrum command.
  - Fix PseudoScript.cpp - did not properly handle cases where pseudo names
    had spaces in them.
February 23, 2006
  - Fix typo in Gui/spectrum.tcl
March 10, 2006
  - Unit tested migration of TCL++ library to object interfaces (remove
    deprecated interfaces).
  - Added Docbook generating stuff to configure.in
March 13, 2006
  - Made operator=, operator== and operator!= of CTCLChannel private as there
    are no implementations.
March 16, 2006
  - Added extensive XML based manpages for the tclPlus CTCL class
    library.
  - Support pre/post command functions for CTCLProcessor.
    this is used in nscldaq to implement the CDAQTCLProcessor.
  - Need to implement CTCLProcssor::Bind to bind itself and the adaptor.