@@ -419,3 +419,5 @@ March 16, 2006
   - Support pre/post command functions for CTCLProcessor.
     this is used in nscldaq to implement the CDAQTCLProcessor.
   - Need to implement CTCLProcssor::Bind to bind itself and the adaptor.
+March 20, 2006
+  - Added a bit more error checking/reporting to spectrum creation gui.
